# c_objective_macro

./: CMakeLists.txt  README.md  main.c  test.c  test.h
include/dobjective/: class.h  classify.h  cleanup.h  vtable.h
